feat(EID-2788): Improve error handling in validation messages to show exact incorrect fields.